--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ tokio_wasi = { version = "1.25.0", features = ["macros", "rt"] }
 anyhow = "1"
 dotenv = "0.15.0"
 openai-flows = "0.7.1"
+airtable-flows = "0.1.9"
+chrono = "0.4.24"
+serde_json = "1.0.96"
